// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <mock-leftnavhamburgerbutton
    arialabel="Assessment - all tests and requirements list"
    classname="some-class"
    issidenavopen="false"
  />
</DocumentFragment>
`;

exports[`FastPassLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <mock-leftnavhamburgerbutton
    arialabel="FastPass - all tests list"
    classname="some-class"
    issidenavopen="false"
  />
</DocumentFragment>
`;

exports[`QuickAssessLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <mock-leftnavhamburgerbutton
    arialabel="Quick Assess - all tests and requirements list"
    classname="some-class"
    issidenavopen="false"
  />
</DocumentFragment>
`;
